$Id$


v0.91.11	02-Sep-2007

	libmbse:
		Removed some logging and code cleanup in the chartran code.

	libmsgbase:
		Added missing record counter when searching GoldED wrong LR
		pointers and forgot to write fixed LR records.

	mbfido:
		Fixed date conversion in netmail-email gate.


v0.91.10	21-Aug-2007 - 02-Sep-2007

	general:
		There is some experimental code for GeoIP support, it does
		nothing if you don't have the library and tools. But if you do
		have it, mbcico logs the country and city of the incoming
		calls depending on the databases you have installed.
		Added example telnet login for NetBSD.
		Dropped support for NetBSD < 3.0.
		Added support for Ubuntu.

	libmbse:
		Added support or the ARM processor, thanks to Simon Voortman.
		Fixed compile without iconv support.

	libdiesel:
		Fixed linking problem on OpenBSD.

	libmsgbase:
		Added extra debug info in pack function.
		Only adjust LR pointers if they must be changed to save some
		disk i/o.
		LastRead records that don't belong to a valid user are
		purged.
		LastRead pointers are searched via an alternate method if the
		record is created by GoldED.
		Don't purge GoldED style LastRead records but fix them.

	mbcico:
		Fixed a lot of compiler warnings.
		Fixed compiling on NetBSD 3.1.
		Catch SIGIOT.

	mbout:
		Catch SIGIOT.

	mbaff:
		Catch SIGIOT.

	mbfido:
		Fixed a lot of compiler warnings.
		Fixed compiling on NetBSD 3.1.
		If the LFN in the tic file is empty, create a lowercase name.
		Catch SIGIOT.

	mbfile:
		Catch SIGIOT.

	mbindex:
		Catch SIGIOT.

	mbmsg:
		Catch SIGIOT.

	mbdiff:
		Fixed a lot of compiler warnings.
		Catch SIGIOT.

	mball:
		Removed debug logging for checking WWW/FTP downloads.
		Catch SIGIOT.

	mbsebbs:
		Fixed a lot of compiler warnings.
		Fixed compiling on NetBSD 3.1.
		Catch SIGIOT.
		Use both CRC and User ID to search lastread record.

	mbnewusr:
		Catch SIGIOT.

	mbstat:
		Catch SIGIOT.

	mbnntp:
		Catch SIGIOT.

	mbmon:
		Added support or the ARM processor.